# doseLab

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doseLab.cc  source.mac
.github/workflows/: ci.yml  daily-upstream-sync.yml  mirror-to-lindbohansen.yml
analysis/baseline/: reference_metrics.json
analysis/fano/baselines/: latest
analysis/fano/baselines/20260702-075809/: metadata.json  summary.json  summary.txt
envs/: doselab-production.yml
include/: DoseLabActionInitialization.hh  DoseLabAnalysisConfig.hh  DoseLabDetectorConstruction.hh  DoseLabDetectorMessenger.hh  DoseLabEventAction.hh  DoseLabMacroRuntime.hh  DoseLabOutputMetadata.hh  DoseLabPrimaryGeneratorAction.hh  DoseLabRunAction.hh
macros/: calibration-base.mac  cavity-farmer-walled.mac  cavity-farmer.mac  cavity-roos-walled.mac  cavity-roos.mac  depth-ref-5cm-center.mac  fano-base.mac  field-ref-10x10-ssd100.mac  full-run.mac  gui.mac  helper-disable-vis.mac  init_vis.mac  run-fano-v1-farmer-walled.mac  run-fano-v1-farmer.mac  run-fano-v1-roos-walled.mac  run-fano-v1-roos.mac  run-full.mac  run-ref-10x10-d10cm-10mv-custom.mac  run-ref-10x10-d10cm-10mv-farmer-walled.mac  run-ref-10x10-d10cm-10mv-farmer.mac  run-ref-10x10-d10cm-10mv-roos-walled.mac  run-ref-10x10-d10cm-10mv-roos.mac  run-ref-10x10-d10cm-10mv.mac  run-ref-10x10-d10cm-6mv-custom.mac  run-ref-10x10-d10cm-6mv-farmer-walled.mac  run-ref-10x10-d10cm-6mv-farmer.mac  run-ref-10x10-d10cm-6mv-roos-walled.mac  run-ref-10x10-d10cm-6mv-roos.mac  run-ref-10x10-d10cm-6mv.mac  run-ref-10x10-d10cm-co60-custom.mac  run-ref-10x10-d10cm-co60-farmer-walled.mac  run-ref-10x10-d10cm-co60-farmer.mac  run-ref-10x10-d10cm-co60-roos-walled.mac  run-ref-10x10-d10cm-co60-roos.mac  run-ref-10x10-d10cm-co60.mac  run-ref-10x10-d5cm-10mv-custom.mac  run-ref-10x10-d5cm-10mv-farmer-walled.mac  run-ref-10x10-d5cm-10mv-farmer.mac  run-ref-10x10-d5cm-10mv-roos-walled.mac  run-ref-10x10-d5cm-10mv-roos.mac  (+52 more)
scripts/: archive-calibration-baseline.sh  archive-fano-baseline.sh  backup-mirror-weekly.sh  build-production.sh  check-baseline.py  env-helpers.sh  root_quicklook.C  run-calibration-baseline.sh  run-calibration-matrix.sh  run-fano-baseline.sh  run-fano-matrix.sh  run-production-reference.sh  summarize-calibration-matrix.py  summarize-fano-matrix.py
src/: DoseLabActionInitialization.cc  DoseLabDetectorConstruction.cc  DoseLabDetectorMessenger.cc  DoseLabEventAction.cc  DoseLabMacroRuntime.cc  DoseLabPrimaryGeneratorAction.cc  DoseLabRunAction.cc  doseLab.cc
tools/: doseLabRootSummary.cc
